# SymPyGR

./: .gitignore  Energetics_of_the_Einstein_Rosen_Spacetime_Herrera_et_al.py  License  README.md  bssn_eqns.py  bssn_graph.py  ccz4_eqns.py  emda_configs.py  emda_graph.py  generate_parameter_files.py  git commandas  pyproject.toml  requirements.txt  setup.py  toml_param_parser.py
Bobby_research/: ResearchMettingNotes.txt  allocate95.cpp  auto_sep.py  bssn.cpp  bssnMini.cpp  deallocate95.cpp  disjoint_set.py  expressionTree.py  fileParser.py  main.py  newCode15.cpp  newCode95.cpp  rhs.cpp.in  rhs_staged.cpp  test_expression_tree.py  u1001542@kingspeak.chpc.utah.edu
GR/: Clustering.py  bssn.cpp  bssn.py  bssnDerivs.py  bssnOriginal.cpp  bssnUtils.py  bssn_stages.py  cog.py  compare-results.py  constraints.py  constraints_stages.py  cudaSharedMemManager.py  cuda_bssn.py  dendro.py  dependency.dot  dependency.gv  dependency.py  gw.py  laplaciangraph.py  nlsm.py  swsh.py  (+1 more)
bssn/: CMakeLists.txt  ReadMe.md  bandwidthTest  git commandas  git-commandas.txt
bssn/CodeGen/: bssn.py  bssnDerivs.py  bssn_stages.py  bssn_test.py  cachesim_bssn.py  cog.py  constraints.py  dendro.py  dendroutils.py  generateProject.py  gutils.py  gw.py  memoryManager.py  nlsm.cpp.in  nlsm.py  nlsmParams.py  nlsmUtils.cpp.in  nxgraph.py  parameters.py  physcon.cpp.in  projectPaths.py  rhs.cpp.in  sympy_cachesim.py
bssn/CodeGen/CogInput/: CMakeLists.txt.in
bssn/CodeGen/CogInput/include/: nlsmUtils.h.in  profile_params.h.in  rhs.h.in  rk4.h.in  utils.h.in
bssn/CodeGen/CogInput/src/: main.cpp.in  nlsm.cpp.in  nlsmUtils.cpp.in  profile_params.cpp.in  rhs.cpp.in  rk4.cpp.in  rk4nlsm.cpp.in  utils.cpp.in
bssn/CodeGen/CogInputTestBuild/: CMakeLists.txt.in
bssn/CodeGen/output/: nlsm.par.json  nlsmParams.cpp  nlsmParams.h  nlsmTest.cpp
bssn/bandwidthTest/: bandwidthTest
bssn/cuda_gr/: readme.txt
bssn/cuda_gr/cuda_include/: bssnEqns.cuh  cudaBCS.cuh  cudaDerivs.cuh  cudaRHS.cuh  cuda_bssneqs.cuh  deviceDerivs.cuh  getOutput.cuh
bssn/cuda_gr/cuda_src/: bssnEqns.cu  cudaBCS.cu  cudaDerivs.cu  cudaRHS.cu  deviceDerivs.cu  deviceDerivsShared.cu  deviceDerivsXYZ.cu  getOutput.cu
bssn/cuda_gr/include/: block.h  bssn_rhs_deriv_mem_cuda.h  cudaBSSN.h  cudaUtils.cuh  dataGeneration.h  derivs.cuh  derivs_bssn.cuh  gpuBSSNExample.h  mergeSort.h  params_cu.h  profileGPU.h  profile_gpu.h  profilerClass.h  rhs.cuh  rhsMethods.h  rhs_bssn.cuh  rhs_cuda.cuh  temp_test_grad_arrays.h
bssn/cuda_gr/src/: bssn_rhs_deriv_mem_cuda.cpp  cudaBSSN.cpp  cudaUtils.cu  dataGeneration.cpp  derivs.cu  derivs_bssn.cu  gpuBSSNExample.cpp  mergeSort.cpp  params_cu.cpp  profileGPU.cpp  profile_gpu.cpp  profilerClass.cpp  rhs.cu  rhsMethods.cpp  rhs_bssn.cu  rhs_cuda.cu  temp_test_grad_arrays.cpp
bssn/cuda_gr/utils/: args_derivs_offsets.h  args_offset_derivs.h  bssnrhs_cuda_malloc.h  bssnrhs_cuda_mdealloc.h  calc_deriv_calls_1.cuh  calc_deriv_calls_1_bflag.cuh  calc_deriv_calls_2.cuh  calc_deriv_calls_2_bflag.cuh  calc_ko_deriv_calls.cuh  calc_ko_deriv_calls_bflag.cuh  cuda_bssneqs.cuh  declare_ref_derivs.h  deriv_calls_1.cuh  deriv_calls_1_bflag.cuh  deriv_calls_2.cuh  deriv_calls_2_bflag.cuh  ko_deriv_calls.cuh  ko_deriv_calls_bflag.cuh  list_of_args.h  list_of_offset_para.h  para_derivs.h  para_derivs_offsets.h
bssn/cuda_src/: adv_derivs_cuda.cu  bssneqn_solve.cu  derivs_cuda.cu  device_derivs.cu  kernal.cu  kernal_deriv42_x.cu  ko_derivs_cuda.cu  p100basic441-all-withRHS.nvvp  p100basic441-all.nvvp  rhs_cuda.cu  synctimecalc.nvvp
bssn/examples/bench/: Makefile  a.cpp
bssn/examples/include/: rhsTest.h
bssn/examples/src/: derivTest.cpp  derivTest2.cpp  rhsTest.cpp  stream_add.cpp  test_loop_novector.cpp  test_loop_novector_stages.cpp  test_loop_vector.cpp  test_loop_vector_stages.cpp
bssn/helper/: Automatic_execution.py  Malloc_Gen.py  bssn_convert.py  bssn_convert_to_round.py  bssneqToGPU.py  compare_two_files.py  custom.py  executor.py  higher_digits_float_op.py  performance_check.py  shared_variable_creator_rhs.py  test_bssneqs.cpp  test_bssnrhs_derivs_adv.h  test_bssnrhs_ko_derivs.h  test_bssnrhs_memalloc.h  test_cuda_bssneqs.h  verify_output.py
bssn/include/: GPUConfig.h  TreeNode.h  block.h  block_cu.h  bssn_profiler.h  bssneqn_solve.cuh  bssneqn_solve.h  comman_config.h  computeBSSN.h  cudaUtils.h  cuda_bssneqs.h  def.h  dendro.h  derivs.h  derivs_cuda.h  grDef.h  grUtils.h  kernal.h  kernal_deriv42_x.h  list_of_args.h  list_of_args_per_blk.h  list_of_offset_args.h  list_of_para.h  memory_pool.h  merge_sort.h  parameters.h  profile_param.h  rhs.h  rhs_cuda.cuh  rhs_cuda.h  test_CPU_adv_derivs.h  test_CPU_derivs.h  test_GPU_adv_derivs.h  test_GPU_derivs.h  test_cpu_fw.h  test_cuda.h  test_cuda_fw.h  test_param.h  test_param_init.h  test_support.h  (+2 more)
bssn/scripts/: gen_bssnrhs_code
bssn/src/: At_rhs.cpp  B_rhs.cpp  B_rhs_eta_const.cpp  B_rhs_eta_func.cpp  CalGt.cpp  Gt_rhs.cpp  Gt_rhs_s1_.cpp  Gt_rhs_s2_.cpp  Gt_rhs_s3_.cpp  Gt_rhs_s4_.cpp  Gt_rhs_s5_.cpp  Gt_rhs_s6_.cpp  Gt_rhs_s7_.cpp  K_rhs.cpp  TreeNode.cpp  a_rhs.cpp  b_rhs.cpp  block.cpp  bssn_auto_sep.cpp  bssn_profiler.cpp  bssneqs.cpp  bssneqs_eta_const_rochester_gauge.cpp  bssneqs_eta_const_standard_gauge.cpp  bssneqs_eta_func_rochester_gauge.cpp  bssneqs_eta_func_standard_gauge.cpp  chi_rhs.cpp  computeBSSN.cpp  cudaUtils.cpp  derivs.cpp  grUtils.cpp  gt_rhs.cpp  parameters.cpp  profile_param.cpp  rhs.cpp  test_support.cpp  utils.cpp
bssn/utils/: bssnrhs_cuda_derivs.h  bssnrhs_cuda_derivs_adv.h  bssnrhs_cuda_derivs_first_part.h  bssnrhs_cuda_derivs_secondd_part.h  bssnrhs_cuda_ko_derivs.h  bssnrhs_cuda_malloc.h  bssnrhs_cuda_malloc_adv.h  bssnrhs_cuda_mdealloc.h  bssnrhs_cuda_mdealloc_adv.h  bssnrhs_cuda_offset_demalloc.h  bssnrhs_cuda_offset_malloc.h  bssnrhs_cuda_offset_memcopy.h  bssnrhs_cuda_offset_variable_malloc.h  bssnrhs_cuda_variable_malloc.h  bssnrhs_cuda_variable_malloc_adv.h  bssnrhs_dealloc.h  bssnrhs_derivs.h  bssnrhs_derivs_adv.h  bssnrhs_memalloc.h  bssnrhs_memalloc_adv.h  constraint_dealloc.h  constraint_derivs.h  constraint_memalloc.h
(+252 files in other folders)
