[tool.poetry]
name = "dendrosym"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
networkx = "^3.1"
sympy = "^1.12"
pycachesim = "^0.3.1"
tomlkit = "^0.11.8"
numpy-quaternion = "^2022.4.3"

[tool.poetry.scripts]
dendro-build = "dendrosym.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
